# deno-jieba

./: .gitignore  Cargo.toml  LICENSE  READMD.md  README.md  bindings.json  mod.ts
bindings/: bindings.ts
deno_bindgen/: .gitrepo  codegen.ts
plug/: .gitrepo  plug.ts
src/: lib.rs
