[package]
name = "deno-jieba"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_bindgen = "0.5.1"
jieba-rs = { version = "0.6.6", features = ["default-dict", "tfidf", "textrank"] }
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
lazy_static = "1.4.0"
